# npsv

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt  setup.py
cmake/: FindSeqLib.cmake
etc/: Homo_sapiens_assembly38.gaps.bed.gz.tbi  human_g1k_v37.gaps.bed.gz.tbi
paper/: benchmarking.sh  example.sh  mendelian_stats.py  offset_stats.py  variant_stats.py
scripts/: fixSVVCF  npsv  padAlleles  plot_real  propose2vcf  svviz22vcf  synthBAM  vcf2bed  vcf2samplot
src/npsv/: aligner.cpp  aligner.hpp  bindings.cpp  feature_extraction.py  fragment.py  genotyper.py  main.py  npsv_options.py  npsvg.py  plot.py  propose.py  random_variants.py  realigner.cpp  realigner.hpp  sample.py  simulation.cpp  simulation.hpp  simulation.py  utility.hpp  variant.py
tests/: binding_test.py  feature_tests.py  genotyping_tests.py  realigner_test.py  sample_test.py  simulation_test.py  variant_test.py
tests/data/: 12_22125565_22134387.bam  12_22125565_22134387.bam.bai  12_22129565_22130387_DEL.vcf.gz.tbi  1_1598413_1598580.del_1_1598412.report.tsv  1_1598414_1598580_DEL.bam  1_1598414_1598580_DEL.bam.bai  1_1598414_1598580_DEL.real.tsv  1_1598414_1598580_DEL.sim.tsv  1_1598414_1598580_DEL.vcf.gz.tbi  1_1861644_1871561.bam  1_1861644_1871561.bam.bai  1_1865644_1866241_DEL.vcf.gz.tbi  1_2073761_2073846_DEL.synth.fasta  1_2073761_2073846_DEL.vcf.gz.tbi  1_2073761_2073846_DEL_1.bam  1_2073761_2073846_DEL_1.bam.bai  1_2073761_2073846_DEL_2.bam  1_2073761_2073846_DEL_2.bam.bai  1_55334339_55334389_DEL.vcf.gz.tbi  trio.ped  (+21 more)
